--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -3,9 +3,8 @@ name: JS Actions
 on: [push]
 
 jobs:
-  build:
-    name: run build
+  action:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
