--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -8,7 +8,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-
+      - name: install npm packages
+        run: npm install
       - name: hello-action
         uses: ./.github/actions/hello-world
         with:
