--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -14,3 +14,7 @@ jobs:
          npm install
       - name: hello-action
         uses: ./.github/actions/hello-world
+        with:
+          first-greeting: "test1"
+          second-greeting: "test2"
+          third-greeting: "test3"
