--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,18 +1,18 @@
-name: JS Actions
+# name: JS Actions
 
-on: [push]
+# on: [push]
 
-jobs:
-  action:
-    runs-on: ubuntu-latest
+# jobs:
+#   action:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v1
-      - name: install npm packages
-        run: |
-         cd ./.github/actions/hello-world
-         npm install
-      - name: hello-action
-        uses: ./.github/actions/hello-world
-        with:
-          third-greeting: "test3"
+#     steps:
+#       - uses: actions/checkout@v1
+#       - name: install npm packages
+#         run: |
+#          cd ./.github/actions/hello-world
+#          npm install
+#       - name: hello-action
+#         uses: ./.github/actions/hello-world
+#         with:
+#           third-greeting: "test3"
