--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -25,6 +25,10 @@ jobs:
       - name: my joke
         uses: ./.github/actions/joke-action
         id: jokes
+      - name: install npm issue-marker packages
+        run: |
+         cd ./.github/actions/issue-maker
+         npm install
       - name: create issue
         uses: ./.github/actions/issue-maker
         with:
